--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "constants.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production nodemon server.js",
-    "dev": "NODE_ENV=development nodemon server.js"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "repository": {
     "type": "git",
