--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "constants.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "NODE_ENV=development nodemon server.js"
   },
   "repository": {
